1. Updates to all functions. 2. The BEDParser of the solution is replaced by GIFP. 3. The Interfaces of the solution is replaced by IGenomics. 4. All projects are updated to match the new libraries. 5. Few bugs are resolved. 6. Exporting Cover results is added.

--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -42,6 +42,9 @@
     <Reference Include="CSharpTest.Net.Library">
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
+    <Reference Include="IGenomics">
+      <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
+    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
@@ -69,12 +72,6 @@
     <Compile Include="Serializers\BlockSerializer.cs" />
     <Compile Include="Serializers\LambdaArraySerializer.cs" />
     <Compile Include="Serializers\LambdaItemSerializer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{ee126208-2f58-446f-9476-00f833ca965f}</Project>
-      <Name>Interfaces</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
