--- a/Di3/IndexSpeedTest/IndexSpeedTest.csproj
+++ b/Di3/IndexSpeedTest/IndexSpeedTest.csproj
@@ -44,6 +44,9 @@
     <Reference Include="CSharpTest.Net.Library">
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
+    <Reference Include="IGenomics">
+      <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
+    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
@@ -68,10 +71,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BEDParser\BEDParser.csproj">
-      <Project>{a8579878-71fa-44b1-9fcf-62c88cbe5248}</Project>
-      <Name>BEDParser</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Di3BCLI\Di3BCLI.csproj">
       <Project>{ed22831f-4e4d-4c49-b02b-a8cb21dccf35}</Project>
       <Name>Di3BCLI</Name>
@@ -79,10 +78,6 @@
     <ProjectReference Include="..\Di3\Di3.csproj">
       <Project>{a18501a2-6959-40b2-9d17-9bb563c51bdc}</Project>
       <Name>Di3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{ee126208-2f58-446f-9476-00f833ca965f}</Project>
-      <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
