--- a/Di3/Di3B/Di3B.csproj
+++ b/Di3/Di3B/Di3B.csproj
@@ -42,6 +42,9 @@
     <Reference Include="CSharpTest.Net.Library">
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
+    <Reference Include="IGenomics">
+      <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -60,7 +63,6 @@
     <Compile Include="FunctionsOutput\CSOutputCount.cs" />
     <Compile Include="FunctionsOutput\FunctionOutput.cs" />
     <Compile Include="FunctionsOutput\Output.cs" />
-    <Compile Include="GeneticHierarchy\Chromosome.cs" />
     <Compile Include="GeneticHierarchy\Genome.cs" />
     <Compile Include="Logging\ExecutionReport.cs" />
     <Compile Include="MessageElement.cs" />
@@ -70,10 +72,6 @@
     <ProjectReference Include="..\Di3\Di3.csproj">
       <Project>{a18501a2-6959-40b2-9d17-9bb563c51bdc}</Project>
       <Name>Di3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{ee126208-2f58-446f-9476-00f833ca965f}</Project>
-      <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
