--- a/Di3/Di3BCLI/Di3BCLI.csproj
+++ b/Di3/Di3BCLI/Di3BCLI.csproj
@@ -47,6 +47,12 @@
     <Reference Include="CSharpTest.Net.Library">
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
+    <Reference Include="GIFP">
+      <HintPath>..\..\..\..\..\02 - GIFP\GIFP\GIFP\GIFP\bin\Debug\GIFP.dll</HintPath>
+    </Reference>
+    <Reference Include="IGenomics">
+      <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -67,6 +73,7 @@
     <Compile Include="PrimaryComponents\Repository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultsExport\Exporter.cs" />
     <Compile Include="Serializers\Check.cs" />
     <Compile Include="Serializers\PrimitiveSerializer.cs" />
   </ItemGroup>
@@ -75,17 +82,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BEDParser\BEDParser.csproj">
-      <Project>{a8579878-71fa-44b1-9fcf-62c88cbe5248}</Project>
-      <Name>BEDParser</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Di3B\Di3B.csproj">
       <Project>{d17dd4b8-ea5a-4a0c-a029-7b353b092aa1}</Project>
       <Name>Di3B</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{ee126208-2f58-446f-9476-00f833ca965f}</Project>
-      <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
