--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A18501A2-6959-40B2-9D17-9BB563C51BDC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Di3</RootNamespace>
+    <RootNamespace>DI3</RootNamespace>
     <AssemblyName>Di3</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -57,19 +57,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="BasicOperations\BulkIndex.cs" />
     <Compile Include="BasicOperations\HigherOrderFuncs.cs" />
     <Compile Include="BasicOperations\SingleIndex.cs" />
     <Compile Include="BasicOperations\RangeIndex.cs" />
+    <Compile Include="BasicOperations\SingleIndex2R.cs" />
     <Compile Include="Di3.cs" />
     <Compile Include="Interfaces\ICSOutput.cs" />
     <Compile Include="PrimaryComponents\B.cs" />
+    <Compile Include="PrimaryComponents\Block.cs" />
     <Compile Include="PrimaryComponents\Di3Options.cs" />
     <Compile Include="AuxiliaryComponents\Enums.cs" />
     <Compile Include="PrimaryComponents\Lambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serializers\BlockSerializer.cs" />
+    <Compile Include="Serializers\BlockKeySerializer.cs" />
+    <Compile Include="Serializers\BlockValueSerializer.cs" />
+    <Compile Include="Serializers\BookmarkSerializer.cs" />
     <Compile Include="Serializers\LambdaArraySerializer.cs" />
     <Compile Include="Serializers\LambdaItemSerializer.cs" />
   </ItemGroup>
