--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A18501A2-6959-40B2-9D17-9BB563C51BDC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DI3</RootNamespace>
+    <RootNamespace>Polimi.DEIB.VahidJalili.DI3</RootNamespace>
     <AssemblyName>Di3</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -61,6 +61,7 @@
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="BasicOperations\BulkIndex.cs" />
+    <Compile Include="BasicOperations\FirstOrderFuncs.cs" />
     <Compile Include="BasicOperations\HigherOrderFuncs.cs" />
     <Compile Include="BasicOperations\SingleIndex.cs" />
     <Compile Include="BasicOperations\RangeIndex.cs" />
