1. Accumulation histogram function is updated. 2. Thread count control is changed to be from Di3CLI, however, it's not fully incorporated yet.

--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuxiliaryComponents\AccEntryStruct.cs" />
     <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
