--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -36,6 +36,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CSharpTest.Net.BPlusTree">
       <HintPath>..\packages\CSharpTest.Net.BPlusTree.2.14.126.467\lib\net45\CSharpTest.Net.BPlusTree.dll</HintPath>
@@ -62,12 +80,13 @@
     <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
-    <Compile Include="BasicOperations\BulkIndex.cs" />
-    <Compile Include="BasicOperations\FirstOrderFuncs.cs" />
-    <Compile Include="BasicOperations\HigherOrderFuncs.cs" />
-    <Compile Include="BasicOperations\SingleIndex.cs" />
-    <Compile Include="BasicOperations\RangeIndex.cs" />
-    <Compile Include="BasicOperations\SingleIndex2R.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\BulkIndex.cs" />
+    <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
+    <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\HigherOrderFuncs.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\SingleIndex.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\RangeIndex.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\SingleIndex2R.cs" />
     <Compile Include="Di3.cs" />
     <Compile Include="Interfaces\ICSOutput.cs" />
     <Compile Include="PrimaryComponents\B.cs" />
