--- a/Di3/SimulationDataGenerator/SimulationDataGenerator.csproj
+++ b/Di3/SimulationDataGenerator/SimulationDataGenerator.csproj
@@ -85,10 +85,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GIFP">
-      <HintPath>..\..\..\..\..\..\CodePlex\Git\mspc\Libraries\GIFP.dll</HintPath>
+      <HintPath>..\..\..\..\..\02 - GIFP\GIFP\GIFP\GIFP\bin\Debug\GIFP.dll</HintPath>
     </Reference>
     <Reference Include="IGenomics">
-      <HintPath>..\..\..\..\..\..\CodePlex\Git\mspc\Libraries\IGenomics.dll</HintPath>
+      <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
