--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Di3\packages.config" />
   <repository path="..\Di3B\packages.config" />
   <repository path="..\Di3BCLI\packages.config" />
+  <repository path="..\Di3BConfiguration\packages.config" />
   <repository path="..\Di3WithCustomBlockSerializer\packages.config" />
   <repository path="..\IndexSpeedTest\packages.config" />
   <repository path="..\MapSpeedTest\packages.config" />
