--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -81,7 +81,7 @@
     <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\HigherOrderFuncs.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\IndexesCount.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\SingleIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\RangeIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\SingleIndex2R.cs" />
