--- a/Di3/Di3B/Di3B.csproj
+++ b/Di3/Di3B/Di3B.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D17DD4B8-EA5A-4A0C-A029-7B353B092AA1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Di3B</RootNamespace>
+    <RootNamespace>Polimi.DEIB.VahidJalili.DI3.DI3B</RootNamespace>
     <AssemblyName>Di3B</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -84,6 +84,7 @@
     <Compile Include="FunctionsOutput\Output.cs" />
     <Compile Include="GeneticHierarchy\Genome.cs" />
     <Compile Include="Logging\ExecutionReport.cs" />
+    <Compile Include="MaxDegreeOfParallelism.cs" />
     <Compile Include="MessageElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
