few updates, cover (and possibly other functions) have some issues that they create null intervals. Possibly the collections are not thread-safe.

--- a/Di3/Di3BCLI/App.config
+++ b/Di3/Di3BCLI/App.config
@@ -1,5 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="Chromosome" type="Polimi.DEIB.VahidJalili.DI3.DI3B.ChrSection, Di3B, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+  </configSections>
+  <Chromosome>
+    <GenomeEndpoints>
+      <add Chr="chr1" Strand="*" Index="f:\e\Di3chr1U" />
+      <add Chr="chr2" Strand="*" Index="f:\e\Di3chr2U" />
+      <add Chr="chr3" Strand="*" Index="f:\e\Di3chr3U" />
+      <add Chr="chr4" Strand="*" Index="f:\e\Di3chr4U" />
+      <add Chr="chr5" Strand="*" Index="f:\e\Di3chr5U" />
+      <add Chr="chr6" Strand="*" Index="f:\e\Di3chr6U" />
+      <add Chr="chr7" Strand="*" Index="f:\e\Di3chr7U" />
+      <add Chr="chr8" Strand="*" Index="f:\e\Di3chr8U" />
+      <add Chr="chr9" Strand="*" Index="f:\e\Di3chr9U" />
+      <add Chr="chr10" Strand="*" Index="f:\e\Di3chr10U" />
+      <add Chr="chr11" Strand="*" Index="f:\e\Di3chr11U" />
+      <add Chr="chr12" Strand="*" Index="f:\e\Di3chr12U" />
+      <add Chr="chr13" Strand="*" Index="f:\e\Di3chr13U" />
+      <add Chr="chr14" Strand="*" Index="f:\e\Di3chr14U" />
+      <add Chr="chr15" Strand="*" Index="f:\e\Di3chr15U" />
+      <add Chr="chr16" Strand="*" Index="f:\e\Di3chr16U" />
+      <add Chr="chr17" Strand="*" Index="f:\e\Di3chr17U" />
+      <add Chr="chr18" Strand="*" Index="f:\e\Di3chr18U" />
+    </GenomeEndpoints>
+  </Chromosome>
+  <appSettings>
+    <add key="WorkingDirectory" value="f:\e\" />
+    <add key="LogFile" value="f:\e\di3.log" />
+  </appSettings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true" />
   </runtime>
