1. Cover, summit, and Map algorithms are modified to avoid first iteration for all mu determination. New algorithm goes in parallel with main iteration, and continues after main iteration break only if all mu's are not determined.
2. Cover and Summit functions are separated from Map fuction to avoid unnecessarly complicated functions that satisfy conditions of both.

--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -77,10 +77,11 @@
     <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\Map.cs" />
     <Compile Include="BasicOperations\IndexFunctions\BulkIndex.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\HigherOrderFuncs.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\SingleIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\RangeIndex.cs" />
