few test code snippet added.

--- a/Di3/Di3BCLI/App.config
+++ b/Di3/Di3BCLI/App.config
@@ -1,5 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="Chromosome" type="Polimi.DEIB.VahidJalili.DI3.DI3B.ChrSection, Di3B, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+  </configSections>
+  <Chromosome>
+    <GenomeEndpoints>
+      <add Chr="chr1" Strand="*" Index="F:\realDataIndexed\Di3chr1U" />
+      <add Chr="chr10" Strand="*" Index="F:\realDataIndexed\Di3chr10U" />
+      <add Chr="chr11" Strand="*" Index="F:\realDataIndexed\Di3chr11U" />
+      <add Chr="chr12" Strand="*" Index="F:\realDataIndexed\Di3chr12U" />
+      <add Chr="chr13" Strand="*" Index="F:\realDataIndexed\Di3chr13U" />
+      <add Chr="chr14" Strand="*" Index="F:\realDataIndexed\Di3chr14U" />
+      <add Chr="chr15" Strand="*" Index="F:\realDataIndexed\Di3chr15U" />
+      <add Chr="chr16" Strand="*" Index="F:\realDataIndexed\Di3chr16U" />
+      <add Chr="chr17" Strand="*" Index="F:\realDataIndexed\Di3chr17U" />
+      <add Chr="chr18" Strand="*" Index="F:\realDataIndexed\Di3chr18U" />
+      <add Chr="chr19" Strand="*" Index="F:\realDataIndexed\Di3chr19U" />
+      <add Chr="chr2" Strand="*" Index="F:\realDataIndexed\Di3chr2U" />
+      <add Chr="chr20" Strand="*" Index="F:\realDataIndexed\Di3chr20U" />
+      <add Chr="chr21" Strand="*" Index="F:\realDataIndexed\Di3chr21U" />
+      <add Chr="chr22" Strand="*" Index="F:\realDataIndexed\Di3chr22U" />
+      <add Chr="chr3" Strand="*" Index="F:\realDataIndexed\Di3chr3U" />
+      <add Chr="chr4" Strand="*" Index="F:\realDataIndexed\Di3chr4U" />
+      <add Chr="chr5" Strand="*" Index="F:\realDataIndexed\Di3chr5U" />
+      <add Chr="chr6" Strand="*" Index="F:\realDataIndexed\Di3chr6U" />
+      <add Chr="chr7" Strand="*" Index="F:\realDataIndexed\Di3chr7U" />
+      <add Chr="chr8" Strand="*" Index="F:\realDataIndexed\Di3chr8U" />
+      <add Chr="chr9" Strand="*" Index="F:\realDataIndexed\Di3chr9U" />
+      <add Chr="chrx" Strand="*" Index="F:\realDataIndexed\Di3chrxU" />
+      <add Chr="chry" Strand="*" Index="F:\realDataIndexed\Di3chryU" />
+      <add Chr="chrm" Strand="*" Index="F:\realDataIndexed\Di3chrmU" />
+    </GenomeEndpoints>
+  </Chromosome>
+  <appSettings>
+    <add key="WorkingDirectory" value="F:\realDataIndexed\" />
+    <add key="LogFile" value="F:\realDataIndexed\di3.log" />
+  </appSettings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true" />
   </runtime>
