--- a/Di3/SimulationDataGenerator/SimulationDataGenerator.csproj
+++ b/Di3/SimulationDataGenerator/SimulationDataGenerator.csproj
@@ -85,7 +85,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GIFP">
-      <HintPath>..\..\..\..\..\02 - GIFP\GIFP\GIFP\GIFP\bin\Debug\GIFP.dll</HintPath>
+      <HintPath>..\..\..\..\..\02 - GIFP\GIFP\GIFP\GIFP\bin\Release\GIFP.dll</HintPath>
     </Reference>
     <Reference Include="IGenomics">
       <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
