--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -62,7 +62,7 @@
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
     <Reference Include="IGenomics">
-      <HintPath>..\..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
+      <HintPath>..\..\..\..\03 - IGenomics\IGenomic\IGenomics\IGenomics\bin\Debug\IGenomics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -76,13 +76,17 @@
     <Compile Include="AuxiliaryComponents\AccEntryStruct.cs" />
     <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\CacheOptions.cs" />
+    <Compile Include="AuxiliaryComponents\IndexingET.cs" />
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\IIndexFunctions\IICoverSummit.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\IIndexFunctions\IIMap.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Map.cs" />
     <Compile Include="BasicOperations\IndexFunctions\BulkIndex.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\IIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\SingleIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\RangeIndex.cs" />
@@ -90,21 +94,24 @@
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di3.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
-    <Compile Include="PrimaryComponents\B.cs" />
+    <Compile Include="PrimaryComponents\IB.cs" />
     <Compile Include="PrimaryComponents\Block.cs" />
-    <Compile Include="PrimaryComponents\Di3Options.cs" />
+    <Compile Include="AuxiliaryComponents\Di3Options.cs" />
     <Compile Include="AuxiliaryComponents\Enums.cs" />
+    <Compile Include="PrimaryComponents\IIB.cs" />
     <Compile Include="PrimaryComponents\Lambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\BlockKeySerializer.cs" />
     <Compile Include="Serializers\BlockValueSerializer.cs" />
     <Compile Include="Serializers\BookmarkSerializer.cs" />
+    <Compile Include="Serializers\IBookmarkSerializer.cs" />
     <Compile Include="Serializers\LambdaArraySerializer.cs" />
     <Compile Include="Serializers\LambdaItemSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
