--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -49,7 +49,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuxiliaryComponents\AccEntryStruct.cs" />
+    <Compile Include="AuxiliaryComponents\BlockInfoDis.cs" />
     <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\CacheOptions.cs" />
     <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DecompositionStack.cs" />
@@ -86,8 +87,8 @@
     <Compile Include="BasicOperations\HigherOrderFunctions\Inv %28Inverted%29\Map.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\Map.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BulkIndex.cs" />
-    <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
-    <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
+    <Compile Include="BasicOperations\FirstOrderFunctions\Inc %28Incremental%29\AccumulationStats.cs" />
+    <Compile Include="BasicOperations\FirstOrderFunctions\Inc %28Incremental%29\Merge.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_NEW.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inv %28Inverted%29\BatchIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
@@ -98,8 +99,9 @@
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
+    <Compile Include="PrimaryComponents\BlockValue.cs" />
     <Compile Include="PrimaryComponents\Inc %28Incremental%29\B.cs" />
-    <Compile Include="PrimaryComponents\Block.cs" />
+    <Compile Include="PrimaryComponents\BlockKey.cs" />
     <Compile Include="AuxiliaryComponents\Di3Options.cs" />
     <Compile Include="AuxiliaryComponents\Enums.cs" />
     <Compile Include="PrimaryComponents\Inv %28Inverted%29\B.cs" />
@@ -115,7 +117,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="BasicOperations\FirstOrderFunctions\Inv %28Inverted%29\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
