--- a/Di4/Di4BCLI/App.config
+++ b/Di4/Di4BCLI/App.config
@@ -1,50 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="Chromosome" type="Polimi.DEIB.VahidJalili.DI4.DI4B.ChrSection, Di4B, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
-  </configSections>
-  <Chromosome>
-    <GenomeEndpoints>
-      <add Chr="chr1" Strand="*" Index="d:\data\Di4chr1U" />
-      <add Chr="chr10" Strand="*" Index="d:\data\Di4chr10U" />
-      <add Chr="chr11" Strand="*" Index="d:\data\Di4chr11U" />
-      <add Chr="chr12" Strand="*" Index="d:\data\Di4chr12U" />
-      <add Chr="chr13" Strand="*" Index="d:\data\Di4chr13U" />
-      <add Chr="chr14" Strand="*" Index="d:\data\Di4chr14U" />
-      <add Chr="chr15" Strand="*" Index="d:\data\Di4chr15U" />
-      <add Chr="chr16" Strand="*" Index="d:\data\Di4chr16U" />
-      <add Chr="chr17" Strand="*" Index="d:\data\Di4chr17U" />
-      <add Chr="chr18" Strand="*" Index="d:\data\Di4chr18U" />
-      <add Chr="chr19" Strand="*" Index="d:\data\Di4chr19U" />
-      <add Chr="chr2" Strand="*" Index="d:\data\Di4chr2U" />
-      <add Chr="chr20" Strand="*" Index="d:\data\Di4chr20U" />
-      <add Chr="chr21" Strand="*" Index="d:\data\Di4chr21U" />
-      <add Chr="chr22" Strand="*" Index="d:\data\Di4chr22U" />
-      <add Chr="chr3" Strand="*" Index="d:\data\Di4chr3U" />
-      <add Chr="chr4" Strand="*" Index="d:\data\Di4chr4U" />
-      <add Chr="chr5" Strand="*" Index="d:\data\Di4chr5U" />
-      <add Chr="chr6" Strand="*" Index="d:\data\Di4chr6U" />
-      <add Chr="chr7" Strand="*" Index="d:\data\Di4chr7U" />
-      <add Chr="chr8" Strand="*" Index="d:\data\Di4chr8U" />
-      <add Chr="chr9" Strand="*" Index="d:\data\Di4chr9U" />
-      <add Chr="chrX" Strand="*" Index="d:\data\Di4chrXU" />
-      <add Chr="chrY" Strand="*" Index="d:\data\Di4chrYU" />
-      <add Chr="chrM" Strand="*" Index="d:\data\Di4chrMU" />
-    </GenomeEndpoints>
-  </Chromosome>
   <appSettings>
-    <add key="Memory" value="HDD" />
+    <add key="Memory" value="RAM" />
     <add key="Parser__ChrColumn" value="0" />
     <add key="Parser__LeftEndColumn" value="3" />
     <add key="Parser__RightEndColumn" value="4" />
     <add key="Parser__NameColumn" value="8" />
     <add key="Parser__ValueColumn" value="5" />
-    <add key="WorkingDirectory" value="d:\data\" />
-    <add key="LogFile" value="d:\data\di4_4_2_4K.log" />
-    <add key="EnableInvertedIndex" value="y" />
-    <add key="EnableIncrementalIndex" value="y" />
-    <add key="MinBInCache" value="2" />
-    <add key="MaxBInCache" value="4" />
   </appSettings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true"/>
