1. The function STATS is updated, now it reports to a file following information: (1) interval count [incomplete], (2) bookmark count, (3) block count. Previously this function was reporting the indexes and the filename for each index. 2. A histogram file could possibly be very large, so to improve usability, an option as "Mux" is added, which can set Di4 to either collect all chromosome histogram information in single file (option: JOIN), or report the histogram of each chromosome to separate file (option: DISJOIN). 3. The EXPORTER function defines one stopwatch instance per function, multiple instances are replaced by a shared stopwatch.

--- a/Di4/Di4BCLI/Di4BCLI.csproj
+++ b/Di4/Di4BCLI/Di4BCLI.csproj
@@ -87,13 +87,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Comparers\Int32Comparer.cs" />
+    <Compile Include="Components\Enums.cs" />
     <Compile Include="Logging\Herald.cs" />
     <Compile Include="Orchestrator.cs" />
-    <Compile Include="PrimaryComponents\Peak.cs" />
-    <Compile Include="PrimaryComponents\PeakData.cs" />
-    <Compile Include="PrimaryComponents\Repository.cs" />
-    <Compile Include="PrimaryComponents\UserConfig.cs" />
-    <Compile Include="PrimaryComponents\UserConfigSetup.cs" />
+    <Compile Include="Components\Peak.cs" />
+    <Compile Include="Components\PeakData.cs" />
+    <Compile Include="Components\Repository.cs" />
+    <Compile Include="Components\UserConfig.cs" />
+    <Compile Include="Components\UserConfigSetup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultsExport\Exporter.cs" />
