--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -75,22 +75,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuxiliaryComponents\AccEntryStruct.cs" />
+    <Compile Include="AuxiliaryComponents\AtomicDictionary.cs" />
     <Compile Include="AuxiliaryComponents\BlockInfoDis.cs" />
     <Compile Include="AuxiliaryComponents\BlockKeyComparer.cs" />
     <Compile Include="AuxiliaryComponents\CacheOptions.cs" />
+    <Compile Include="AuxiliaryComponents\HashHelpers.cs" />
+    <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\Decomposer.cs" />
+    <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DecomposerValue.cs" />
     <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DecompositionStack.cs" />
     <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DesignatedRegion.cs" />
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="AuxiliaryComponents\Stats.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_OLD.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inv %28Inverted%29\CoverSummit.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inv %28Inverted%29\Map.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\Map.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BulkIndex.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Inc %28Incremental%29\AccumulationStats.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Inc %28Incremental%29\Merge.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_NEW.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_mid.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inv %28Inverted%29\BatchIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex.cs" />
