--- a/Di4/Di4BCLI/App.config
+++ b/Di4/Di4BCLI/App.config
@@ -3,10 +3,16 @@
   <appSettings>
     <add key="Memory" value="RAM" />
     <add key="Parser__ChrColumn" value="0" />
-    <add key="Parser__LeftEndColumn" value="3" />
-    <add key="Parser__RightEndColumn" value="4" />
-    <add key="Parser__NameColumn" value="8" />
-    <add key="Parser__ValueColumn" value="5" />
+    <add key="Parser__LeftEndColumn" value="1" />
+    <add key="Parser__RightEndColumn" value="2" />
+    <add key="Parser__NameColumn" value="3" />
+    <add key="Parser__ValueColumn" value="4" />
+    <add key="WorkingDirectory" value="e:\data\" />
+    <add key="LogFile" value="e:\data\di4.log" />
+    <add key="EnableInvertedIndex" value="n" />
+    <add key="EnableIncrementalIndex" value="y" />
+    <add key="MinBInCache" value="10" />
+    <add key="MaxBInCache" value="20" />
   </appSettings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true"/>
