--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -113,6 +113,7 @@
     <Compile Include="PrimaryComponents\Inv %28Inverted%29\B.cs" />
     <Compile Include="PrimaryComponents\Lambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializers\atIArraySerializer.cs" />
     <Compile Include="Serializers\BlockKeySerializer.cs" />
     <Compile Include="Serializers\BlockValueSerializer.cs" />
     <Compile Include="Serializers\Inc %28Incremental%29\BSerializer.cs" />
