--- a/Di4/Di4BCLI/App.config
+++ b/Di4/Di4BCLI/App.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="Chromosome" type="Polimi.DEIB.VahidJalili.DI4.DI4B.ChrSection, Di4B, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+  </configSections>
   <appSettings>
     <add key="Memory" value="RAM" />
     <add key="Parser__ChrColumn" value="0" />
@@ -7,6 +10,12 @@
     <add key="Parser__RightEndColumn" value="2" />
     <add key="Parser__NameColumn" value="3" />
     <add key="Parser__ValueColumn" value="4" />
+    <add key="WorkingDirectory" value="E:\data\" />
+    <add key="LogFile" value="E:\data\Di4.log" />
+    <add key="EnableInvertedIndex" value="n" />
+    <add key="EnableIncrementalIndex" value="y" />
+    <add key="MinBInCache" value="0" />
+    <add key="MaxBInCache" value="0" />
   </appSettings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true"/>
