--- a/Di4/Di4BCLI/App.config
+++ b/Di4/Di4BCLI/App.config
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Memory" value="HDD" />
-    <add key="Parser__ChrColumn" value="0" />
-    <add key="Parser__LeftEndColumn" value="1" />
-    <add key="Parser__RightEndColumn" value="2" />
-    <add key="Parser__NameColumn" value="3" />
-    <add key="Parser__ValueColumn" value="4" />
-    <add key="WorkingDirectory" value="E:\data\" />
-    <add key="LogFile" value="E:\test\Di4.log" />
-    <add key="EnableInvertedIndex" value="n" />
-    <add key="EnableIncrementalIndex" value="y" />
-    <add key="MinBInCache" value="10" />
-    <add key="MaxBInCache" value="100" />
+    <add key="Memory" value="RAM"/>
+    <add key="Parser__ChrColumn" value="0"/>
+    <add key="Parser__LeftEndColumn" value="1"/>
+    <add key="Parser__RightEndColumn" value="2"/>
+    <add key="Parser__NameColumn" value="3"/>
+    <add key="Parser__ValueColumn" value="4"/>
+    <add key="EnableInvertedIndex" value="n"/>
+    <add key="EnableIncrementalIndex" value="y"/>
+    <add key="MinBInCache" value="10"/>
+    <add key="MaxBInCache" value="100"/>
   </appSettings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true"/>
   </runtime>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
   </startup>
 </configuration>
