Refactor higher order functions and move the out of the Inc folder.

--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -88,17 +88,17 @@
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="AuxiliaryComponents\Stats.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_OLD.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\MapCount.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\TMapForVariantAnalysis.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\VariantOutputStrategy.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\VariationAnalysis.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\Map.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit_OLD.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\MapCount.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\TMapForVariantAnalysis.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\VariantOutputStrategy.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\VariationAnalysis.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\Map.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BulkIndex.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_mid.cs" />
+    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit_mid.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\RangeIndex.cs" />
