Refactor indexing methods and move the out of the inc folder.

--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -95,14 +95,14 @@
     <Compile Include="BasicOperations\HigherOrderFunctions\VariantOutputStrategy.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\VariationAnalysis.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Map.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BulkIndex.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\BulkIndex.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
     <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit_mid.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\RangeIndex.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex2R.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\BatchIndex.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\RangeIndex.cs" />
+    <Compile Include="BasicOperations\IndexFunctions\BatchIndex2R.cs" />
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
